next
----
-clovrdownload: Commented out moving downloaded output from /mnt/data to user specified out directory. This is done as the tags are not being updated.
-clovr_16S_rdptables: new CloVR related component, was part of rdp_classifier, but made external for non-clovr users
-software.config: added MUGSY_EXEC variable that holds mugsy installation
-mugsycog: modified mugsycog.xml so that MUGSY_EXEC variable holds the mugsy path. Also, added --map_file param needed for mapfeatures.pl
-pfunc modules. Now assigns annotation sets and keeps uniref100 id instead of uniprot member ids for annotation source information regarding BER parsing
-rdp_classifer: removed script associated with CloVR, will make it a separate component.
-mugsyalign: Added FASTA_FILE_DIR key in <param> section as this value is critical for mugsy to write output to.
-blast2bsml: Deprecated blast2bsml.pl becuase it wasn't being used by any components. Still in SVN (deprecated_blast2bsml.pl)
-wu-blast2bsml/wu-blast2btab: renamed to blast2bsml.pl and blast2btab.pl. Was being used by both ncbi and wu versions of blast.
-blast_components: change wu-blast2btab/bsml -> blast2btab/bsml where applicable
-blast_components: added new var to configs which was missing ($;FILTER_HSPS_FOR_STATS$;)
-blast_components: added new var to configs COMPRESS_BSML_OUTPUT and EXPECT (where needed).
-create_map_file: new component

ergatis-v2r13b2
---------------
-archive_pipeline.cgi: Now uses &File::Path::mkpath to recursively create $archive_root
-histogram_stacked: a component that generated stacked histograms from tab-delimited count data files. Uses R. 

ergatis-v2r13b1
---------------
-tag_data: Fixed bug that occurred when re-running the same pipeline
-download_tag: New CloVR component to download a list of tags
-clusterBsmlPairwiseAlignments.pl: fixed documentation to display true name of bsmlSearchList parameter.
-prepare_paired_ends_for_velvet: will now auto detect format of input files if format is ambiguous.