@@ -86,6 +86,9 @@ $;GENEID_EXEC$;=/usr/local/packages/geneid/bin/geneid
 [component genemark]
 $;GMHMME3_EXEC$;=/usr/local/bin/gmhmme3
 
+[component genemark-es]
+$;GENEMARKES_EXEC$;=/usr/local/packages/GeneMarkHMM_ES_64_v2.3a/gm_es.pl
+
 [component genezilla]
 $;GENEZILLA_EXEC$;=/usr/local/devel/ANNOTATION/jorvis/opt/genezilla
 
@@ -118,6 +121,10 @@ $;CLUSTER_PATH$;=/opt/ergatis/bin/cluster
 
 [component metagene]
 $;METAGENE_EXEC$;=/usr/local/bioinf/metagene/mga_linux_ia32
+
+[component metagenemark]
+$;METAGENEMARK_EXEC$;=/usr/local/packages/metagenemark/gmhmmp
+$;MGM_DEFAULT_MODEL$;=/usr/local/packages/metagenemark/MetaGeneMark_v1.mod
 
 [component mugsycog]
 $;MUGSY_EXEC$;=/opt/opt-packages/mugsy_x86-64-v1r1
